# mailscout

./: .gitignore  LICENSE  README.md
frontend/: .env.local.example  jest.config.ts  middleware.ts  package-lock.json  package.json  tailwind.config.ts
frontend/__tests__/: csv-parser.test.ts  verify-result-card.test.tsx
frontend/app/: layout.tsx  providers.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(auth)/signup/: page.tsx
frontend/app/(dashboard)/: layout.tsx  page.tsx
frontend/app/(dashboard)/bulk/: page.tsx
frontend/app/(dashboard)/history/: page.tsx
frontend/components/: check-pill.tsx  csv-uploader.tsx  donut-chart.tsx  nav.tsx  usage-bar.tsx  verify-result-card.tsx
frontend/lib/: api.ts
frontend/lib/supabase/: server.ts
frontend/types/: api.ts
mailscout-backend/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
mailscout-backend/app/: auth.py  config.py  database.py  main.py
mailscout-backend/app/models/: job.py  verification.py
mailscout-backend/app/routers/: health.py  history.py  jobs.py  verify.py
mailscout-backend/app/schemas/: job.py  verify.py
mailscout-backend/app/services/: catch_all.py  dns_check.py  smtp_check.py  syntax_check.py  verifier.py
mailscout-backend/app/workers/: bulk_verify.py
mailscout-backend/migrations/: 001_initial.sql
mailscout-backend/tests/: conftest.py  test_api.py  test_dns.py  test_smtp.py  test_syntax.py
