[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mailscout-backend"
version = "1.0.0"
description = "Open-source email verification SaaS backend"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "dnspython>=2.7.0",
    "aiosmtplib>=3.0.2",
    "email-validator>=2.2.0",
    "supabase>=2.10.0",
    "redis[asyncio]>=5.2.0",
    "python-multipart>=0.0.20",
    "aiofiles>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.28.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
